--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,86 @@
-.clearer {
-  clear: both;
-}
-.centerMargin {
-  margin-left: auto;
+#page {
+  width: 1280px;
+  height: auto;
   margin-right: auto;
+  margin-left: auto;
+  font-family: 'News Cycle', sans-serif;
+  font-size: 48px;
+  font-weight: normal;
+  color: #000000;
+}
+body {
+  background-color: #444444;
 }
 #content {
-  width: 1200px;
+  float: left;
+  width: 853px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid #000000;
-  background-color: #ffffff;
-  font-family: "Century Gothic";
-  font-size: 18px;
-  font-weight: normal;
+  border: 3px solid #000000;
+  background-color: #dddddd;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
+#sidebar {
+  float: right;
+  width: 386px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid #000000;
+  background-color: #dddddd;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+#header {
+  width: 1264px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid #000000;
+  background-color: #888888;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  font-family: 'News Cycle', sans-serif;
+  font-size: 90px;
+  font-weight: bold;
+  color: #113311;
+}
+#footer {
+  width: 1264px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid #000000;
+  background-color: #888888;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  font-family: 'News Cycle', sans-serif;
+  font-size: 90px;
+  font-weight: bold;
+  color: #113311;
+}
+.separator {
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-top: 1px solid 5px;
+  clear: both;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-top: 1px solid #444444;
+  clear: both;
+}
+/* Built with assistance from LESS =] (http://www.lesscss.org) */
