--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,21 @@
+html {
+  overflow: scroll-y;
+}
 #page {
   width: 1280px;
   height: auto;
+  width: 1280px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  border: 1px solid #999999;
+  background-color: #dddddd;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: auto;
   margin-left: auto;
   font-family: 'News Cycle', sans-serif;
@@ -8,8 +23,19 @@
   font-weight: normal;
   color: #000000;
 }
+#body {
+  width: 1300px;
+  min-height: 100%;
+  height: 100%;
+  background-color: #fff;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 10px 0px;
+  overflow: hidden;
+}
 body {
-  background-color: #444444;
+  margin: 0px;
+  padding: 0px;
 }
 #content {
   float: left;
@@ -17,12 +43,14 @@ body {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  border: 3px solid #000000;
+  border: 1px solid #000000;
   background-color: #dddddd;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 #sidebar {
   float: right;
@@ -30,24 +58,47 @@ body {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  border: 3px solid #000000;
+  border: 1px solid #000000;
   background-color: #dddddd;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+}
+#navigation {
+  width: 1264px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0px solid #000000;
+  background-color: #888888;
+  font-family: 'News Cycle', sans-serif;
+  font-size: 30px;
+  font-weight: normal;
+  color: #113311;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 #header {
   width: 1264px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  border: 3px solid #000000;
+  border: 1px solid #000000;
   background-color: #888888;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 1px;
   padding-bottom: 1px;
+  margin-top: 1px;
+  margin-bottom: 1px;
   font-family: 'News Cycle', sans-serif;
   font-size: 90px;
   font-weight: bold;
@@ -58,12 +109,14 @@ body {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  border: 3px solid #000000;
+  border: 1px solid #000000;
   background-color: #888888;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 1px;
   padding-bottom: 1px;
+  margin-top: 1px;
+  margin-bottom: 1px;
   font-family: 'News Cycle', sans-serif;
   font-size: 90px;
   font-weight: bold;
@@ -74,13 +127,41 @@ body {
   margin-right: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
-  border-top: 1px solid 5px;
+  min-height: 1px;
   clear: both;
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 5px;
   margin-bottom: 5px;
-  border-top: 1px solid #444444;
+  min-height: 1px;
   clear: both;
+}
+.content-item {
+  width: 848px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #000000;
+  background-color: #bbbbbb;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 15px;
+  min-height: 1px;
+  clear: both;
+}
+.content-item-title {
+  font-family: 'News Cycle', sans-serif;
+  font-size: 36px;
+  font-weight: 100;
+  color: #335533;
+  padding-left: 10px;
+}
+.content-item-content {
+  font-family: 'News Cycle', sans-serif;
+  font-size: 24px;
+  font-weight: normal;
+  color: #113311;
+  padding-left: 10px;
 }
 /* Built with assistance from LESS =] (http://www.lesscss.org) */
