--- a/style/style.css
+++ b/style/style.css
@@ -1,186 +1,2 @@
-html {
-  overflow: scroll-y;
-}
-#page {
-  width: 1280px;
-  height: auto;
-  width: 1280px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  border: 1px solid #999999;
-  background-color: #dddddd;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 48px;
-  font-weight: normal;
-  color: #000000;
-}
-#body {
-  width: 1300px;
-  min-height: 100%;
-  height: 100%;
-  background-color: #fff;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 10px 0px;
-  overflow: hidden;
-}
-body {
-  margin: 0px;
-  padding: 0px;
-}
-#content {
-  float: left;
-  width: 853px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #000000;
-  background-color: #dddddd;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-#sidebar {
-  float: right;
-  width: 386px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #000000;
-  background-color: #dddddd;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-right: 5px;
-}
-#navigation {
-  width: 1264px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 0px solid #000000;
-  background-color: #888888;
-  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 30px;
-  font-weight: normal;
-  color: #113311;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  margin-top: 1px;
-  margin-bottom: 1px;
-}
-#header {
-  width: 1264px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #000000;
-  background-color: #888888;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  margin-top: 1px;
-  margin-bottom: 1px;
-  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 90px;
-  font-weight: normal;
-  color: #113311;
-  text-align: right;
-}
-#footer {
-  width: 1264px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #000000;
-  background-color: #888888;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  margin-top: 1px;
-  margin-bottom: 1px;
-  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 90px;
-  font-weight: normal;
-  color: #113311;
-}
-.separator {
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  min-height: 1px;
-  clear: both;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  min-height: 1px;
-  clear: both;
-}
-.content-item {
-  width: 848px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #000000;
-  background-color: #bbbbbb;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  margin-bottom: 15px;
-  min-height: 1px;
-  clear: both;
-}
-.content-item-title {
-  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 36px;
-  font-weight: 100;
-  color: #335533;
-  padding-left: 10px;
-}
-.content-item-content {
-  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 24px;
-  font-weight: normal;
-  color: #113311;
-  padding-left: 10px;
-}
-@font-face {
-  font-family: 'News Cycle';
-  font-style: normal;
-  font-weight: 400;
-  src: local('News Cycle Regular'), local('NewsCycle-Regular'), url(../fonts/news-cycle.woff) format('woff');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), url(../fonts/open-sans.woff) format('woff');
-}
-@font-face {
-  font-family: 'Century Gothic';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Century Gothic'), url(../fonts/century-gothic.woff) format('woff');
-}
-/* Built with assistance from LESS =] (http://www.lesscss.org) */
+html{overflow:scroll-y}#page{width:1024px;height:auto;width:1024px;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;border:1px solid #999;background-color:#ddd;padding-left:5px;padding-right:5px;padding-top:5px;padding-bottom:5px;margin-top:5px;margin-bottom:5px;margin-right:auto;margin-left:auto;font-family:'News Cycle','Opera Sans','Century Gothic',sans-serif;font-size:48px;font-weight:400;color:#000}#body{width:1044px;min-height:100%;height:100%;background-color:#fff;margin-right:auto;margin-left:auto;padding:10px 0;overflow:hidden}body{margin:0;padding:0}#content{float:left;width:682px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #000;background-color:#ddd;padding-left:5px;padding-right:5px;padding-top:5px;padding-bottom:5px;margin-top:5px;margin-bottom:5px}#sidebar{float:right;width:301px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #000;background-color:#ddd;padding-left:5px;padding-right:5px;padding-top:5px;padding-bottom:5px;margin-top:5px;margin-bottom:5px;margin-right:5px}#navigation{width:1008px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:0 solid #000;background-color:#888;font-family:'News Cycle','Opera Sans','Century Gothic',sans-serif;font-size:30px;font-weight:400;color:#131;padding-left:5px;padding-right:5px;padding-top:1px;padding-bottom:1px;margin-top:1px;margin-bottom:1px}#header{width:1008px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #000;background-color:#888;padding-left:5px;padding-right:5px;padding-top:1px;padding-bottom:1px;margin-top:1px;margin-bottom:1px;font-family:'News Cycle','Opera Sans','Century Gothic',sans-serif;font-size:90px;font-weight:400;color:#131;text-align:right}#footer{width:1008px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #000;background-color:#888;padding-left:5px;padding-right:5px;padding-top:1px;padding-bottom:1px;margin-top:1px;margin-bottom:1px;font-family:'News Cycle','Opera Sans','Century Gothic',sans-serif;font-size:90px;font-weight:400;color:#131}.separator{margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;min-height:1px;clear:both;margin-left:0;margin-right:0;margin-top:5px;margin-bottom:5px;min-height:1px;clear:both}.content-item{width:677px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #000;background-color:#bbb;margin-left:0;margin-right:0;margin-top:0;margin-bottom:15px;min-height:1px;clear:both}.content-item-title{font-family:'News Cycle','Opera Sans','Century Gothic',sans-serif;font-size:36px;font-weight:100;color:#353;padding-left:10px}.content-item-content{font-family:'News Cycle','Opera Sans','Century Gothic',sans-serif;font-size:24px;font-weight:400;color:#131;padding-left:10px}@font-face{font-family:'News Cycle';font-style:normal;font-weight:400;src:local('News Cycle Regular'),local('NewsCycle-Regular'),url(../fonts/news-cycle.woff) format('woff')}@font-face{font-family:'Open Sans';font-style:normal;font-weight:400;src:local('Open Sans'),url(../fonts/open-sans.woff) format('woff')}@font-face{font-family:'Century Gothic';font-style:normal;font-weight:400;src:local('Century Gothic'),url(../fonts/century-gothic.woff) format('woff')}
+/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
