--- a/style/style.css
+++ b/style/style.css
@@ -1,2 +1,245 @@
-@font-face{font-family:'News Cycle';font-style:normal;font-weight:400;src:local('News Cycle Regular'),local('NewsCycle-Regular'),url(/fonts/news-cycle.woff) format('woff')}@font-face{font-family:'Open Sans';font-style:normal;font-weight:400;src:local('Open Sans'),url(/fonts/open-sans.woff) format('woff')}@font-face{font-family:'Century Gothic';font-style:normal;font-weight:400;src:local('Century Gothic'),url(/fonts/century-gothic.woff) format('woff')}@font-face{font-family:'League Gothic';font-style:normal;font-weight:700;src:local('League Gothic'),url(/fonts/league-gothic.woff) format('woff')}.separator{margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;min-height:1px;clear:both;margin-left:0;margin-right:0;margin-top:5px;margin-bottom:5px;min-height:1px;clear:both}html{overflow-y:scroll}body{background-color:#f3f3c0;margin:0;padding:0}#page{width:1024px;height:auto;width:1024px;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;border:0 solid #000;background-color:#bb8;padding-left:5px;padding-right:5px;padding-top:5px;padding-bottom:5px;margin-top:5px;margin-bottom:5px;margin-right:auto;margin-left:auto;font-family:'News Cycle','League Gothic','Opera Sans','Century Gothic',sans-serif;font-size:20px;font-weight:400;color:#000;min-height:40 0}#header{width:768px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:0 solid #000;background-color:#bb8;padding-left:5px;padding-right:5px;padding-top:1px;padding-bottom:1px;margin-top:1px;margin-bottom:1px;font-family:'News Cycle','League Gothic','Opera Sans','Century Gothic',sans-serif;font-size:90px;font-weight:700;color:#000}#navigation{width:1024px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:0 solid #000;background-color:#bb8;font-family:'News Cycle','League Gothic','Opera Sans','Century Gothic',sans-serif;font-size:30px;font-weight:400;color:#000;float:right;margin-bottom:5px}#navigation a:active,#navigation a:visited,#navigation a:hover,#navigation a:link{text-decoration:none;font-style:none;color:inherit}#navigation ul{list-style:none;margin:0;padding:0;text-align:right}#navigation li{display:inline;padding-left:15px;padding-right:15px;padding-top:3px;padding-bottom:3px;margin-top:3px;margin-bottom:3px}.nav-item{width:2%;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #8d8d50;background-color:#8d8d50;margin-right:auto;margin-left:auto;-webkit-transition:all .2s ease;-moz-transition:all .2s ease}.nav-item:hover{width:2%;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #5c5c35;background-color:#5c5c35;margin-right:auto;margin-left:auto;color:#fff;cursor:default}#active-nav-item{width:2%;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #5c5c35;background-color:#5c5c35;-webkit-transition:none;transition:none;-moz-transition:none;-o-transition:none;color:inherit}.content{width:1024px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:0 solid #000;background-color:#bb8;margin-bottom:10px}.content a:active,.content a:visited,.content a:link{text-decoration:none;font-weight:700;color:inherit;-webkit-transition:all .2s ease;-moz-transition:all .2s ease}.content a:hover{color:#555}.content p{padding:10px;margin:0}#latest h1{font-weight:700;font-size:24px;margin:0;padding:0;padding-left:10px}#latest li{list-style-type:square}#footer{width:1024px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:0 solid #000;background-color:#bb8;font-family:'News Cycle','League Gothic','Opera Sans','Century Gothic',sans-serif;font-size:18px;font-weight:400;color:#000;text-align:center;width:1024px;margin-right:auto;margin-left:auto;padding-left:5px;padding-right:5px;padding-top:5px;padding-bottom:5px;margin-top:5px;margin-bottom:5px}#footer a:active,#footer a:visited,#footer a:link{text-decoration:none;-webkit-transition:all .2s ease;-moz-transition:all .2s ease;color:#000}#footer a:hover{color:#686835}#copyright{font-family:'News Cycle','League Gothic','Opera Sans','Century Gothic',sans-serif;font-size:12px;font-weight:400;color:#000;text-align:center}#hey-there{font-size:50px;font-weight:700}
-/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
+@font-face {
+  font-family: 'News Cycle';
+  font-style: normal;
+  font-weight: 400;
+  src: local('News Cycle Regular'), local('NewsCycle-Regular'), url(/fonts/news-cycle.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), url(/fonts/open-sans.woff) format('woff');
+}
+@font-face {
+  font-family: 'Century Gothic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Century Gothic'), url(/fonts/century-gothic.woff) format('woff');
+}
+@font-face {
+  font-family: 'League Gothic';
+  font-style: normal;
+  font-weight: bold;
+  src: local('League Gothic'), url(/fonts/league-gothic.woff) format('woff');
+}
+.separator {
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  min-height: 1px;
+  clear: both;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  min-height: 1px;
+  clear: both;
+}
+html {
+  overflow-y: scroll;
+}
+body {
+  margin: 0px;
+  padding: 0px;
+  background-image: -webkit-gradient(linear, left bottom, right top, color-stop(0, #eaea95), color-stop(0.25, #eaea95), color-stop(0.25, #f3f3c4), color-stop(0.5, #f3f3c4), color-stop(0.5, #eaea95), color-stop(0.75, #eaea95), color-stop(0.75, #f3f3c4));
+  background-size: 20px 20px;
+  width: 100%;
+  height: 100%;
+}
+#page {
+  margin-top: 20px;
+  width: 1024px;
+  height: auto;
+  width: 1024px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  border: 0px solid #000000;
+  background-color: #bbbb88;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  color: #000000;
+  min-height: 40 0px;
+}
+#header {
+  width: 768px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0px solid #000000;
+  background-color: #bbbb88;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  margin-top: 1px;
+  margin-bottom: 1px;
+  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-size: 90px;
+  font-weight: bold;
+  color: #000000;
+}
+#navigation {
+  width: 1024px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0px solid #000000;
+  background-color: #bbbb88;
+  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-size: 30px;
+  font-weight: normal;
+  color: #000000;
+  float: right;
+  margin-bottom: 5px;
+}
+#navigation a:active,
+#navigation a:visited,
+#navigation a:hover,
+#navigation a:link {
+  text-decoration: none;
+  font-style: none;
+  color: inherit;
+}
+#navigation ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  text-align: right;
+}
+#navigation li {
+  display: inline;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+.nav-item {
+  width: 2%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #8d8d50;
+  background-color: #8d8d50;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+}
+.nav-item:hover {
+  width: 2%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #5c5c35;
+  background-color: #5c5c35;
+  margin-right: auto;
+  margin-left: auto;
+  color: #fff;
+  cursor: default;
+}
+#active-nav-item {
+  width: 2%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #5c5c35;
+  background-color: #5c5c35;
+  -webkit-transition: none;
+  transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  color: inherit;
+}
+.content {
+  width: 1024px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0px solid #000000;
+  background-color: #bbbb88;
+  margin-bottom: 10px;
+}
+.content a:active,
+.content a:visited,
+.content a:link {
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+}
+.content a:hover {
+  color: #555555;
+}
+.content p {
+  padding: 10px;
+  margin: 0px;
+}
+#latest h1 {
+  font-weight: bold;
+  font-size: 24px;
+  margin: 0px;
+  padding: 0px;
+  padding-left: 10px;
+}
+#latest li {
+  list-style-type: square;
+}
+#footer {
+  width: 1024px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0px solid #000000;
+  background-color: #bbbb88;
+  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-size: 18px;
+  font-weight: normal;
+  color: #000000;
+  text-align: center;
+  width: 1024px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+#footer a:active,
+#footer a:visited,
+#footer a:link {
+  text-decoration: none;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  color: #000000;
+}
+#footer a:hover {
+  color: #686835;
+}
+#copyright {
+  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 15px;
+}
+#hey-there {
+  font-size: 50px;
+  font-weight: bold;
+}
