--- a/style/style.css
+++ b/style/style.css
@@ -243,3 +243,14 @@ body {
   font-size: 50px;
   font-weight: bold;
 }
+
+#contact-form {
+	width: 1024px;
+	height: auto;
+	margin: auto;
+}
+
+.form-item {
+	width: 80%;
+	margin: auto;
+}
